DocumentSchemalessSerializationTest was fixed.